--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  opacity: 0.6;
 }
 
 .header1 {
@@ -22,27 +23,48 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-
-  /* border-radius: 15px 0px; */
+  width: 36rem;
+  opacity: 0.9;
   font-size: 2.2rem;
   font-weight: 100;
-  letter-spacing: 0.2rem;
-  outline: 1rem inset rgb(223, 64, 223);
+  letter-spacing: 0.4rem;
+  outline: 0.5rem inset rgb(223, 64, 223);
   outline-offset: 1.5rem;
+  text-transform: uppercase;
+  padding: 1rem;
 }
 .header1 p {
   background-color: rgb(64, 64, 64);
   color: white;
   padding: 3rem;
-  border-radius: 1.5rem 0px;
+  border-radius: 2.5rem 0px;
   font-size: 3rem;
+  font-weight: 200;
 }
 .sec-bottom {
   text-align: center;
   font-family: "Lato", sans-serif;
   background-color: rgb(241, 241, 241);
   padding: 2rem;
+  opacity: 0.5;
 }
+
+.two .img2 {
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 36rem;
+  height: auto;
+  opacity: 0.5;
+  font-size: 2.2rem;
+  font-weight: 100;
+  letter-spacing: 0.4rem;
+  padding: 1rem;
+  outline: none;
+}
+
 .sec-bottom h2 {
   font-family: "Lato", sans-serif;
   font-weight: bold;
@@ -57,6 +79,13 @@
 }
 .two {
   position: relative;
+}
+.two .sec-bottom {
+  background-color: rgb(40, 46, 52);
+  opacity: 1;
+}
+.two .sec-bottom p {
+  font-weight: 200;
 }
 .two .img {
   background-image: url("./img/bg2.jpg");
@@ -115,9 +144,11 @@
   padding: 1.5rem;
   font-weight: 100;
 }
-.three h2 {
+.three .header1 {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  background-color: rgb(40, 46, 52);
+  color: white;
 }
 
 .four {
